@@ -85,6 +85,7 @@ public class NodeTool
                 GetInterDCStreamThroughput.class,
                 GetEndpoints.class,
                 GetSSTables.class,
+                GetMaxHintWindow.class,
                 GossipInfo.class,
                 InvalidateKeyCache.class,
                 InvalidateRowCache.class,
@@ -111,6 +112,7 @@ public class NodeTool
                 SetStreamThroughput.class,
                 SetInterDCStreamThroughput.class,
                 SetTraceProbability.class,
+                SetMaxHintWindow.class,
                 Snapshot.class,
                 ListSnapshots.class,
                 Status.class,
